# TFG_arrhythmia_classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
arrhythmia_classifier/: __init__.py  cnn1d_classifier.py  copy_xml_files.py  currentecg_confidence_analysis.py  currentecg_inference.py  dataset_builder.py  dataset_loader.py  export_deidentified_dataset.py  extract_one_xml.py  foundation_moment_currentecg5.py  hybrid_cnn1d_classifier.py  hybrid_cnn1d_currentecg5_optuna.py  hybrid_cnn1d_train_val_test.py  hybrid_cnn_bilstm_optuna.py  plot_ecg_examples.py
dataset/: dataset_loader.py  export_pseudonymized_currentecg5_dataset.py
datasets/: README.md  ecg_training_dataset_arrhythmia4_features_deidentified.summary.json
model/: README.md
results/: README.md  hybrid_cnn1d_currentecg5_optuna_model.pt
results/cnn1d_arrhythmia4_baseline/: classification_report.txt  confusion_matrix.csv
results/cnn1d_clinical5_iteration1/: classification_report.txt  confusion_matrix.csv  metrics.json
results/currentecg_exploratory/: confidence_distribution.csv  inference_report.txt  prediction_distribution.csv
results/currentecg_exploratory_train_val_test/: confidence_distribution.csv  inference_report.txt  inference_summary.json  prediction_distribution.csv
results/foundation_moment_small/: metrics.json  test_classification_report.txt  test_confusion_matrix.csv
results/hybrid_cnn1d_arrhythmia4/: classification_report.txt  confusion_matrix.csv
results/hybrid_cnn1d_arrhythmia4_train_val_test/: metrics.json  test_confusion_matrix.csv  (+3 more)
tests/: test_dataset_builder.py
(+24 files in other folders)
