[project]
name = "arrhythmia-classifier"
version = "0.1.0"
description = "Hybrid arrhythmia classifier for Medtronic XML ECG episode exports"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scikit-learn",
  "torch",
  "Pillow",
  "optuna",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
